--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1850,7 +1850,7 @@
 		text-align: center;
 		text-decoration: none;
 		white-space: nowrap;
-		text-transform: uppercase;
+		/*text-transform: uppercase;*/
 	}
 
 		input[type="submit"].icon,
