--- a/style/main.css
+++ b/style/main.css
@@ -1,3 +1,9 @@
+.borough-button {
+    /*height: 30px;*/
+    /*width:30;*/
+    border:solid 1px black;
+}
+
 body {
     padding-top: 2rem;
     padding-bottom: 2rem;
