--- a/style/main.css
+++ b/style/main.css
@@ -62,6 +62,10 @@ div.bar {
 
 #steps .step.graph-scroll-active{
   opacity: 1;
+  min-height: 200px;
+  margin-bottom: 300px;
+  padding-right: 20px;
+  padding-left: 20px;
 }
 
 #steps {
