--- a/style/main.css
+++ b/style/main.css
@@ -9,7 +9,7 @@
 
 .std-button {
     height:40px;
-    font-size: 0.8em;
+    font-size: 0.9em;
 }
 
 
@@ -19,7 +19,7 @@ body {
 }
 
 .chart_info {
-    font-size: 0.65em;
+    font-size: 0.75em;
 }
 
 div.bar {
@@ -53,17 +53,20 @@ div.bar {
 }
 
 #steps > .step{
+  border: solid 1px black;
   opacity: .3;
-  min-height: 200px;
-  margin-bottom: 300px;
+  min-height: 0px;
+  margin-bottom: 500px;
+  padding-bottom: 200px;
   padding-right: 20px;
   padding-left: 20px;
 } 
 
 #steps .step.graph-scroll-active{
   opacity: 1;
-  min-height: 200px;
-  margin-bottom: 300px;
+  min-height: 0px;
+  margin-bottom: 500px;
+  padding-bottom: 200px;
   padding-right: 20px;
   padding-left: 20px;
 }
