--- a/style/main.css
+++ b/style/main.css
@@ -1,6 +1,11 @@
 .borough-button[aria-pressed="false"] {
     opacity: 0.5;
 }
+
+#toggleAnimations[aria-pressed="false"] {
+    opacity: 0.5;
+}
+
 .borough-button, .borough-button .active {
     border:solid 1px black;
     padding:5px;
@@ -52,9 +57,8 @@ div.bar {
 }
 
 #steps > .step{
-  border: solid 1px black;
   opacity: .3;
-  min-height: 200px;
+  min-height: 400px;
   margin-bottom: 300px;
   padding-right: 20px;
   padding-left: 20px;
@@ -62,7 +66,7 @@ div.bar {
 
 #steps .step.graph-scroll-active{
   opacity: 1;
-  min-height: 200px;
+  min-height: 400px;
   margin-bottom: 300px;
   padding-right: 20px;
   padding-left: 20px;
