--- a/style/main.css
+++ b/style/main.css
@@ -10,6 +10,10 @@ table {
     margin: 0 auto;
 }
 
+#line_svg_slider text {
+    opacity:1;
+}
+
 .borough-button[aria-pressed="false"] {
     opacity: 0.5;
 }
@@ -25,8 +29,6 @@ table {
 }
 
 .std-button {
-    height:30px;
-    width: 60px;
     font-size: 0.8em;
 }
 
