References added, changed animation, added picture

--- a/style/main.css
+++ b/style/main.css
@@ -100,7 +100,7 @@ div.bar {
   /*padding-top:400px;*/
   width: 250px;
   /*margin-left:10px;*/
-  position:relative;
+  /*position:relative;*/
   /*top: 0px;*/
   /*z-index: 90;*/
 }
