--- a/style/main.css
+++ b/style/main.css
@@ -101,6 +101,7 @@ div.bar {
   min-height: 400px;
   margin-bottom: 300px;
   padding-right: 20px;
+  width: 100%;
   padding-left: 20px;
 }
 
@@ -110,7 +111,7 @@ div.bar {
 
 #steps {
   /*padding-top:400px;*/
-  width: 250px;
+  width: 18%;
   /*margin-left:10px;*/
   /*position:relative;*/
   /*top: 0px;*/
