--- a/style/main.css
+++ b/style/main.css
@@ -75,13 +75,21 @@ div.bar {
   text-align:center;
 }
 
+.ani-btn {
+    float:left;
+}
+.down-arrow {
+    width:10%;
+    padding-top:30px;
+}
+
 .step > p {
   font-weight: : normal;
   text-align: left;
 }
 
 .step > h1 {
-  text-align:center;
+  text-align:left;
   font-weight: : bold;
   display: block;
   font-size: 20px;
@@ -92,7 +100,7 @@ div.bar {
   opacity: .3;
   min-height: 400px;
   margin-bottom: 300px;
-  padding-right: 20px;
+  padding-right: 30px;
   padding-left: 20px;
 } 
 
@@ -100,9 +108,9 @@ div.bar {
   opacity: 1!important;
   min-height: 400px;
   margin-bottom: 300px;
-  padding-right: 20px;
-  width: 100%;
+  padding-right: 30px;
   padding-left: 20px;
+  width: 100%;
 }
 
 .graph-scroll-active {
@@ -110,6 +118,8 @@ div.bar {
 }
 
 #steps {
+      padding-right: 25px;
+  padding-left: 25px;
   /*padding-top:400px;*/
   width: 18%;
   /*margin-left:10px;*/
