--- a/style/main.css
+++ b/style/main.css
@@ -35,7 +35,7 @@ table {
 }
 
 .borough-button, .borough-button .active {
-    border:none!important;
+    border:grey solid 1px!important;
     padding:5px;
     color: black!important;
 }
